--- a/src/main/resources/static/altaTitularUI.html
+++ b/src/main/resources/static/altaTitularUI.html
@@ -146,18 +146,18 @@
 
             <div class="fields" id="field_address_apartment">
                 <label for="apartment" class="field_label">Departamento </label>
-                <input id="apartment" class="field_input" type="char" name="apartment" />
+                <input id="apartment" class="field_input" name="apartment" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El departamento ingresado no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_address_city">
               <label for="city" class="field_label">Localidad </label>
-              <input id="city" class="field_input" type="char" name="city" value="Santa Fe" readonly />
+              <input id="city" class="field_input" name="city" value="Santa Fe" readonly />
             </div>
 
             <div class="fields" id="field_address_province">
               <label for="province" class="field_label">Provincia </label>
-              <input id="province" class="field_input" type="char" name="province" value="Santa Fe" readonly />
+              <input id="province" class="field_input" name="province" value="Santa Fe" readonly />
             </div>
 
             <div class="fields" id="field_blood">
@@ -207,7 +207,5 @@
                 crossorigin="anonymous"
         ></script>
     </section>
-    <!-- Footer -->
-    <footer class="text-center"> 2022 © | Design by TripleA</footer>
   </body>
 </html>
